[gd_scene load_steps=18 format=3 uid="uid://cgkejkiif4lpn"]

[ext_resource type="Texture2D" uid="uid://cqx5lmu44wpv5" path="res://assets/sprites/satiro_spritesheet.png" id="1_2fna0"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_4qycj"]
[ext_resource type="AudioStream" uid="uid://dn7rnpitru6dg" path="res://assets/sounds/Jump.wav" id="3_73lqj"]
[ext_resource type="AudioStream" uid="uid://dqnpauf6yygl6" path="res://assets/sounds/hurt3.wav" id="4_be087"]
[ext_resource type="AudioStream" uid="uid://b5efabeynwmk8" path="res://assets/sounds/revive.mp3" id="5_plgjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnnk5"]
size = Vector2(14, 20)

[sub_resource type="Animation" id="Animation_sq4to"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReviveAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_50eub"]
resource_name = "damage"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6)]
}

[sub_resource type="Animation" id="Animation_ekqiw"]
resource_name = "dash"
length = 0.400007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_61t22"]
resource_name = "die"
length = 0.666673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5), Vector2i(7, 5), Vector2i(8, 5), Vector2i(9, 5)]
}

[sub_resource type="Animation" id="Animation_6822w"]
resource_name = "fall"
length = 0.400007
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_dl646"]
resource_name = "idle"
length = 1.20002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_so8bh"]
resource_name = "jump"
length = 0.400007
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_nlxti"]
resource_name = "revive"
length = 0.500005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(9, 5), Vector2i(8, 5), Vector2i(7, 5), Vector2i(6, 5), Vector2i(5, 5), Vector2i(4, 5), Vector2i(3, 5), Vector2i(2, 5), Vector2i(1, 5), Vector2i(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReviveAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nygqr"]
resource_name = "run"
length = 0.53334
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_lfso7"]
resource_name = "stop"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cfod"]
_data = {
"RESET": SubResource("Animation_sq4to"),
"damage": SubResource("Animation_50eub"),
"dash": SubResource("Animation_ekqiw"),
"die": SubResource("Animation_61t22"),
"fall": SubResource("Animation_6822w"),
"idle": SubResource("Animation_dl646"),
"jump": SubResource("Animation_so8bh"),
"revive": SubResource("Animation_nlxti"),
"run": SubResource("Animation_nygqr"),
"stop": SubResource("Animation_lfso7")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_4qycj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_vnnk5")

[node name="PlatformRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 5)
collision_mask = 16

[node name="HurtBox" type="Area2D" parent="." groups=["hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_vnnk5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -11)
texture = ExtResource("1_2fna0")
hframes = 10
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0cfod")
}
autoplay = "idle"

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CayoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_73lqj")

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_be087")

[node name="ReviveAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_plgjc")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
